Fix bug with overlapping SCSS columns. Semi reverted.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,7 +49,9 @@
 }
 
 .col-md-10 {
-	//width: 100%;
+  clear: right;
+  margin-left: 200px;
+	// width: 100%;
 }
 
 .col-md-12 {
@@ -142,14 +144,13 @@ li#navbar {
 #problems_view {
   width: 100%;
   clear: right;
-  padding-left: 215px;
+  // padding-left: 215px;
 }
 
 #thetextarea {
 	height: 100%;
 	width: 100%;
 }
-
 
 #authorize {
 	margin: 0px;
